--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.18.2",
     "input-otp": "^1.4.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.364.0",
     "next-themes": "^0.4.4",
     "playwright": "1.57.0",
