--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lucide-react": "^0.364.0",
     "next-themes": "^0.4.4",
     "playwright": "1.57.0",
+    "posthog-js": "^1.315.1",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
