UI refinements: timeline ordering, send button fix, iOS optimizations
- Timeline chart: Tasks now sorted by start day (earliest first at top)
- Send button: Fixed for lead-based proposals (checks lead email)
- Send button: Now saves first then sends for new quotes
- Sales page: Pipeline filter buttons with horizontal scroll to prevent clipping
- Proposal page: Project name mandatory field with visual highlight
- Auth: Improved iOS app lifecycle handling for background/resume
- Push notifications: Added local notification support for iOS
- Landing page: Navbar and hero section padding adjustments
- Various UI compactness improvements across pages

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clean": "rm -rf node_modules .pnpm-store pnpm-lock.yaml && pnpm store prune"
   },
   "dependencies": {
+    "@capacitor/app": "^8.0.0",
     "@capacitor/cli": "^8.0.0",
     "@capacitor/core": "^8.0.0",
     "@capacitor/ios": "^8.0.0",
