--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,11 @@ dependencies:
   flutter_stripe: ^10.1.1
   
   # Forms & Validation
-  flutter_form_builder: ^9.2.1
-  form_builder_validators: ^9.1.0
+  flutter_form_builder: ^10.2.0
+  form_builder_validators: ^11.0.0
   
   # Utils
-  intl: ^0.19.0
+  intl: any
   url_launcher: ^6.2.2
   share_plus: ^7.2.1
   image_picker: ^1.0.7
