--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,11 @@ dependencies:
   # Supabase
   supabase_flutter: ^2.3.0
   
+  # Firebase Push Notifications
+  firebase_core: ^3.8.1
+  firebase_messaging: ^15.1.6
+  flutter_local_notifications: ^18.0.1
+  
   # Payments
   flutter_stripe: ^10.1.1
   
